added new models

--- a/Sampling-Techniques/sampling.ipynb
+++ b/Sampling-Techniques/sampling.ipynb
@@ -58,7 +58,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Under Sampling + Over Sampling Techniques"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### SMOTE and Tomek Links Undersampling\n",
+    "- SMOTE is an oversampling method that synthesizes new plausible examples in the minority class. Tomek Links refers to a method for identifying pairs of nearest neighbors in a dataset that have different classes. Removing one or both of the examples in these pairs (such as the examples in the majority class) has the effect of making the decision boundary in the training dataset less noisy or ambiguous."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "##"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### SMOTE and Edited Nearest Neighbors Undersampling\n",
+    "- SMOTE may be the most popular oversampling technique and can be combined with many different undersampling techniques. Another very popular undersampling method is the Edited Nearest Neighbors, or ENN, rule. This rule involves using k = 3 nearest neighbors to locate those examples in a dataset that are misclassified and that are then removed"
    ]
   }
  ],
