--- a/Sampling-Techniques/sampling.ipynb
+++ b/Sampling-Techniques/sampling.ipynb
@@ -83,6 +83,38 @@
     "### SMOTE and Edited Nearest Neighbors Undersampling\n",
     "- SMOTE may be the most popular oversampling technique and can be combined with many different undersampling techniques. Another very popular undersampling method is the Edited Nearest Neighbors, or ENN, rule. This rule involves using k = 3 nearest neighbors to locate those examples in a dataset that are misclassified and that are then removed"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Overview\n",
+    "\n",
+    "### Data Sampling Tecnhiques\n",
+    "- Data oversampling involves duplicating examples of the minority class or synthesizing new examples from the minority class from existing examples. Perhaps the most popular methods are SMOTE and variations such as Borderline SMOTE. Perhaps the most important hyperparameter to tune is the amount of oversampling to perform. Examples of data oversampling methods include:\n",
+    "\n",
+    "- Random Oversampling\n",
+    "- SMOTE\n",
+    "- Borderline SMOTE\n",
+    "- SVM SMOTE\n",
+    "- k-Means SMOTE\n",
+    "- ADASYN\n",
+    "\n",
+    "### Undersampling involves deleting examples from the majority class, such as randomly or using an algorithm to carefully choose which examples to delete. Popular editing algorithms include the edited nearest neighbors and Tomek links. Examples of data undersampling methods include:\n",
+    "\n",
+    "- Random Undersampling\n",
+    "- Condensed Nearest Neighbor\n",
+    "- Tomek Links\n",
+    "- Edited Nearest Neighbors\n",
+    "- Neighborhood Cleaning Rule\n",
+    "- One-Sided Selection\n",
+    "\n",
+    "### Almost any oversampling method can be combined with almost any undersampling technique. Therefore, it may be beneficial to test a suite of different combinations of oversampling and undersampling techniques. Examples of popular combinations of over and undersampling include:\n",
+    "\n",
+    "- SMOTE and Random Undersampling\n",
+    "- SMOTE and Tomek Links\n",
+    "- SMOTE and Edited Nearest Neighbors"
+   ]
   }
  ],
  "metadata": {
