added new models;

--- a/Feature-Selection/feature-selection.ipynb
+++ b/Feature-Selection/feature-selection.ipynb
@@ -52,7 +52,25 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## Mutual Information Feature Selection\n",
+    "- Mutual information from the field of information theory is the application of information gain (typically used in the construction of decision trees) to feature selection. Mutual information is calculated between two variables and measures the reduction in uncertainty for one variable given a known value of the other variable.\n",
+    "\n",
+    "## Chi-Squared Feature Selection\n",
+    "- Pearson’s chi-squared (Greek letter squared, e.g. χ2, pronounced kai) statistical hypothesis test is an example of a test for independence between categorical variables. The results of this test can be used for feature selection, where those features that are independent of the target variable can be removed from the dataset.\n",
+    "\n",
+    "## ANOVA F-test Feature Selection\n",
+    "- ANOVA is an acronym for analysis of variance and is a parametric statistical hypothesis test for determining whether the means from two or more samples of data (often three or more) come from the same distribution or not. An F-statistic, or F-test, is a class of statistical tests that calculate the ratio between variances values, such as the variance from two different samples or the explained and unexplained variance by a statistical test, like ANOVA. The ANOVA method is a type of F-statistic referred to here as an ANOVA F-test.\n",
+    "\n",
+    "## How to Select Features for Numerical Output\n",
+    "- There are two popular feature selection techniques that can be used for numerical input data and a numerical target variable. They are:\n",
+    "- Correlation Statistics.\n",
+    "- Mutual Information Statistics.\n",
+    "\n",
+    "## Correlation Feature Selection\n",
+    "- Correlation is a measure of how two variables change together. Perhaps the most common correlation measure is Pearson’s correlation that assumes a Gaussian distribution to each variable and reports on their linear relationship.\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
