added new moels

--- a/Data-Transformations/transformations.ipynb
+++ b/Data-Transformations/transformations.ipynb
@@ -36,6 +36,19 @@
     "### Purpose\n",
     "- This scaler is useful when you need to transform features so they fit within a specific scale while preserving relationships in the data. It’s particularly useful for algorithms that require data within bounded intervals, like gradient descent based algorithms, neural networks, and those that use weight inputs like k-nearest neighbors."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Power Transformer\n",
+    "\n",
+    "### Purpose\n",
+    "- The Power Transformer aims to transform the data to be more Gaussian-like. Common methods under this transformer include the Yeo-Johnson and Box-Cox transformations. These transformations are useful to stabilize variance and minimize skewness.\n",
+    "\n",
+    "- Power transformers are used to make data more normal distribution-like, which can improve the predictiveness of some models. This transformation is helpful in scenarios where homoscedasticity (constant variance) is desired, such as in regression models.\n",
+    "These scaling techniques address different needs in preprocessing data for machine learning and help enhance model performance and accuracy across varied datasets."
+   ]
   }
  ],
  "metadata": {
