added new notes

--- a/Data-Science-Perspective/Data-Transformations/transformations.ipynb
+++ b/Data-Science-Perspective/Data-Transformations/transformations.ipynb
@@ -47,8 +47,15 @@
     "- The Power Transformer aims to transform the data to be more Gaussian-like. Common methods under this transformer include the Yeo-Johnson and Box-Cox transformations. These transformations are useful to stabilize variance and minimize skewness.\n",
     "\n",
     "- Power transformers are used to make data more normal distribution-like, which can improve the predictiveness of some models. This transformation is helpful in scenarios where homoscedasticity (constant variance) is desired, such as in regression models.\n",
-    "These scaling techniques address different needs in preprocessing data for machine learning and help enhance model performance and accuracy across varied datasets."
+    "- Power transforms change the distribution of the variable so that the variance is no longer dependent on the mean. For example, suppose a random variable X has the Poisson distribution. If we transform X by taking its square root, the variance of \n",
+    " is roughly constant, instead of being equal to the mean.\n",
+    "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
