added new models

--- a/Data-Science-Perspective/Feature-Selection/feature-selection.ipynb
+++ b/Data-Science-Perspective/Feature-Selection/feature-selection.ipynb
@@ -82,6 +82,13 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "### Feature selection techniques prune away nonuseful features in order to reduce the complexity of the resulting model. The end goal is a parsimonious model that is quicker to compute, with little or no degradation in predictive accuracy. In order to arrive at such a model, some feature selection techniques require training more than one candidate model. In other words, feature selection is not about reducing training time—in fact, some techniques increase overall training time—but about reducing model scoring time."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
