added new models

--- a/Natural-Language-Process/basics.ipynb
+++ b/Natural-Language-Process/basics.ipynb
@@ -40,6 +40,22 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## Tf-Idf : A Simple Twist on Bag-of-Words\n",
+    "\n",
+    "### Tf-idf is a simple twist on the bag-of-words approach. It stands for term frequency–inverse document frequency.  Instead of looking at the raw counts of each word in each document in a dataset, tf-idf looks at a normalized count where each word count is divided by the number of documents this word appears in.\n",
+    "\n",
+    "### bow(w, d) = # times word w appears in document d\n",
+    "### tf-idf(w, d) = bow(w, d) * N / (# documents in which word w appears)\n",
+    "\n",
+    "### N is the total number of documents in the dataset. The fraction N / (# documents ...) is what’s known as the inverse document frequency. If a word appears in many documents, then its inverse document frequency is close to 1. If a word appears in just a few documents, then the inverse document frequency is much higher.\n",
+    "\n",
+    "### Thus, tf-idf makes rare words more prominent and effectively ignores common words. It is closely related to the frequency-based filtering methods in Chapter 3, but much more mathematically elegant than placing hard cutoff thresholds."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
