added new models

--- a/Natural-Language-Process/attention.ipynb
+++ b/Natural-Language-Process/attention.ipynb
@@ -57,6 +57,13 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "### Attention helpd determine which of these vectors should be used to generate the output. Because the output sequence is dynamically generated one element at a time, atttention can dynamically highlight different encoded vectors at each time point. This allows the decoder to flexibly utilize the most relevant parts of the input sequence."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
