added new models

--- a/Natural-Language-Process/attention.ipynb
+++ b/Natural-Language-Process/attention.ipynb
@@ -78,6 +78,17 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## The Bahdanau Architecture\n",
+    "\n",
+    "### For this purpose, Bahdanau et al. employ a bidirectional RNN, which reads the input sentence in the forward direction to produce a forward hidden state −!h i, and then reads the input sentence in the reverse direction to produce a backward hidden state h− . The annotation for some particular word xi concatenates the two states: i\n",
+    "\n",
+    "### The idea behind generating each annotation in this manner was to capture a summary of both the preceding and succeeding words"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
