added new notes

--- a/Natural-Language-Process/attention.ipynb
+++ b/Natural-Language-Process/attention.ipynb
@@ -83,7 +83,18 @@
     "\n",
     "### For this purpose, Bahdanau et al. employ a bidirectional RNN, which reads the input sentence in the forward direction to produce a forward hidden state −!h i, and then reads the input sentence in the reverse direction to produce a backward hidden state h− . The annotation for some particular word xi concatenates the two states: i\n",
     "\n",
-    "### The idea behind generating each annotation in this manner was to capture a summary of both the preceding and succeeding words"
+    "### The idea behind generating each annotation in this manner was to capture a summary of both the preceding and succeeding words\n",
+    "\n",
+    "### The generated annotations are then passed to the decoder to generate the context vector"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## The Decoder\n",
+    "\n",
+    "### The role of the decoder is to produce the target words by focusing on the most relevant information contained in the source sentence. For this purpose, it makes use of an attention mechanism"
    ]
   },
   {
