added new models

--- a/Natural-Language-Process/attention.ipynb
+++ b/Natural-Language-Process/attention.ipynb
@@ -100,6 +100,20 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## Luong Attention Mechanism"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### The global attentional model resembles the Bahdanau et al. (2015) model in attending to all source words but aims to simplify it architecturally. The local attentional model is inspired by the hard and soft attention models of Xu et al. (2015) and attends to only a few of the source positions. The two attentional models share many of the steps in their prediction of the current word but differ mainly in their computation of the context vector. Let’s first take a look at the overarching Luong attention algorithm and then delve into the differences between the global and local attentional models afterward."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
