added new models

--- a/Deep-Learning/RNN.ipynb
+++ b/Deep-Learning/RNN.ipynb
@@ -13,7 +13,12 @@
     "### RNNs have various advantages, such as:\n",
     "- Ability to handle sequence data.\n",
     "- Ability to handle inputs of varying lengths.\n",
-    "- Ability to store or ‘memorize’ historical information."
+    "- Ability to store or ‘memorize’ historical information.\n",
+    "\n",
+    "### But their disadvantages are:\n",
+    "- The computation can be very slow.\n",
+    "- The network does not take into account future inputs to make decisions.\n",
+    "- Vanishing gradient problem, where the gradients used to compute the weight update may get very close to zero, preventing the network from learning new weights. The deeper the network, the more pronounced this problem is."
    ]
   },
   {
