added new models

--- a/Deep-Learning/RNN.ipynb
+++ b/Deep-Learning/RNN.ipynb
@@ -24,6 +24,21 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## Types of RNNs\n",
+    "\n",
+    "### One-to-One Here, there is a single (xt,yt) pair. Traditional neural networks employ a one- to-one architecture.\n",
+    "\n",
+    "### One-to-Many In one-to-many networks, a single input at xt can produce multiple outputs, (Y0t, Yt1, Yt2) Music generation is an example area where one-to-many networks are employed\n",
+    "\n",
+    "### Many-to-One In this case, many inputs from different time steps produce a single output. For example, (xt,xt+1,xt+2) can produce a single output yt. Such networks are employed in sentiment analysis or emotion detection, where the class label depends upon a sequence of words.\n",
+    "\n",
+    "### Many-to-Many There are many possibilities for many-to-many. An example is shown above, where two inputs produce three outputs. Many-to-many networks are applied in machine translation, e.g., English to French or vice versa translation systems."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
