added new models

--- a/Deep-Learning/RNN.ipynb
+++ b/Deep-Learning/RNN.ipynb
@@ -39,6 +39,17 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## Different RNN Architectures\n",
+    "\n",
+    "### Bidirectional Recurrent Neural Networks (BRNN) In BRNN, inputs from future time steps are used to improve the accuracy of the network. It is like knowing the first and last words of a sentence to predict the middle words.\n",
+    "### Gated Recurrent Units (GRU) These networks are designed to handle the vanishing gradient problem. They have a reset and update gate. These gates determine which information is to be retained for future predictions.\n",
+    "### Long Short Term Memory (LSTM) LSTMs were also designed to address the vanishing gradient problem in RNNs. LSTMs use three gates called input, output, and forget gate. Similar to GRU, these gates determine which information to retain."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
