--- a/Deep-Learning/RNN.ipynb
+++ b/Deep-Learning/RNN.ipynb
@@ -50,12 +50,45 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## The function below returns a model that includes a SimpleRNN layer and a Dense layer for learning sequential data. The input_shape specifies the parameter (time_steps × features). We’ll simplify everything and use univariate data, i.e., one feature only; the time_steps are discussed below."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import math\n",
+    "from pandas import read_csv\n",
+    "import numpy as np\n",
+    "from tensorflow.keras.models import Sequential\n",
+    "from tensorflow.keras.layers import Dense, SimpleRNN \n",
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "from sklearn.metrics import mean_squared_error \n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "def create_RNN(hidden_units, dense_units, input_shape, activation): \n",
+    "  model = Sequential()\n",
+    "  model.add(SimpleRNN(hidden_units, input_shape=input_shape,\n",
+    "                          activation=activation[0]))\n",
+    "  model.add(Dense(units=dense_units, activation=activation[1]))\n",
+    "  model.compile(loss='mean_squared_error', optimizer='adam') \n",
+    "  return model\n",
+    "demo_model = create_RNN(2, 1, (3,1), activation=['linear', 'linear'])"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "machine-learning-env",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.9.19"
   }
  },
  "nbformat": 4,
