added new models

--- a/Natural-Language-Process/attention.ipynb
+++ b/Natural-Language-Process/attention.ipynb
@@ -114,6 +114,16 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## The General Attention Mechanism\n",
+    "\n",
+    "### The general attention mechanism makes use of three main components, namely the queries Q, the keys K, and the values V.\n",
+    "- If you had to compare these three components to the attention mechanism as proposed by Bahdanau et al., then the query would be analogous to the previous decoder output st−1, while the values would be analogous to the encoded inputs hi. In the Bahdanau attention mechhanism, the keys and the values are the same vector"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
