added new models

--- a/Natural-Language-Process/attention.ipynb
+++ b/Natural-Language-Process/attention.ipynb
@@ -132,6 +132,13 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "### The positional encoding vectors are of the same dimension as the input embeddings and are generated using sine and cosine functions of different frequencies. Then, they are simply summed to the input embeddings in order to inject the positional information."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
