added enw models

--- a/Natural-Language-Process/attention.ipynb
+++ b/Natural-Language-Process/attention.ipynb
@@ -139,6 +139,13 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "### Positional encoding is the scheme through which the knowledge of order of objects in a sequence is maintained."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
